<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorDark"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/card"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/cardNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="84dp"
        android:text="@string/card_num"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/cardNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_hint_num"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/cardNumText"
        app:layout_constraintTop_toBottomOf="@+id/cardNumText"
        tools:ignore="MissingConstraints"
        android:autofillHints="@string/card_hint_num" />

    <TextView
        android:id="@+id/mmyyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_date"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardNum"
        app:layout_constraintStart_toStartOf="@+id/mmyy"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/mmyy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/card_hint_date"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/cardNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardNum"
        app:layout_constraintTop_toBottomOf="@+id/mmyyText"
        tools:ignore="MissingConstraints"
        android:autofillHints="@string/card_hint_date" />

    <TextView
        android:id="@+id/birthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_birth"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardPw"
        app:layout_constraintStart_toStartOf="@+id/birth"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/card_hint_birth"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/cardPw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardPw"
        app:layout_constraintTop_toBottomOf="@+id/birthText"
        tools:ignore="MissingConstraints,TextFields"
        android:autofillHints="@string/card_hint_birth" />

    <TextView
        android:id="@+id/cardPwText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/card_pw"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardPw"
        app:layout_constraintTop_toBottomOf="@+id/cardNum"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/cardPw"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:hint="@string/card_hint_pw"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardPwText"
        tools:ignore="MissingConstraints"
        android:autofillHints="@string/card_hint_pw" />

    <Button
        android:id="@+id/cardBtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/qr_btn"
        android:text="@string/card_btn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>